--- a/public/locales/hu/resume.json
+++ b/public/locales/hu/resume.json
@@ -17,7 +17,7 @@
       "description": "Távoktatásból eredő nehézségek miatt nem fejeztem be"
     },
     {
-      "title": "Computer Science Engineer",
+      "title": "Mérnökinformatikus",
       "type": "Alapképzés",
       "at": "Óbudai Egyetem - NIK",
       "from": "2017-09",
