--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,5 +2,12 @@
   "resume_title": "Resume Page",
   "home_title": "Home Page",
   "projects_title": "Projects Page",
-  "project_title": "Current project id"
+  "project_title": "Current project id",
+  "current_job_label": "Currently",
+  "education_title": "Education",
+  "certificates_title": "Certificates",
+  "skills_title": "Skills",
+  "experience_title": "Experiences",
+  "languages_title": "Languages",
+  "socials_title": "Community sites"
 }
