--- a/public/locales/en/resume.json
+++ b/public/locales/en/resume.json
@@ -3,73 +3,30 @@
     {
       "title": "Software Engineer 54 213 05",
       "type": "Advanced Vocational Qualification",
-      "at": "RUANDER Oktatási Kft.",
+      "school": "RUANDER Oktatási Kft.",
       "from": "03/2021",
       "to": "05/2022",
+      "current": false,
       "description": ""
     },
     {
       "title": "Software Engineer",
       "type": "Bachelor's Degree",
-      "at": "Eötvös Loránd University",
+      "school": "Eötvös Loránd University",
       "from": "09/2021",
       "to": "05/2022",
+      "current": false,
       "description": "Haven't completed it due to difficulties with remote education"
     },
     {
       "title": "Computer Science Engineer",
       "type": "Bachelor's Degree",
-      "at": "Óbuda University",
+      "school": "Óbuda University",
       "from": "09/2017",
       "to": "05/2021",
+      "current": false,
       "description": "Haven't completed it due to difficulties with physics and math"
     }
-  ],
-  "certificates": [
-    {
-      "name": "Docker Crash Course",
-      "course": "https://www.udemy.com/course/docker-tutorial-for-devops-run-docker-containers/",
-      "link": "https://drive.google.com/drive/folders/1EpvwV-xSRmmnCn533lwzO-hPhjPrxLhg",
-      "completed": "08/2022"
-    },
-    {
-      "name": "REST APIs with Flask and Python",
-      "course": "https://www.udemy.com/course/rest-api-flask-and-python/",
-      "link": "https://drive.google.com/file/d/1mqQlRGLsrvFPiT-ybomAjTG_Sn0HW84v/view?usp=sharing",
-      "completed": "07/2022"
-    },
-    {
-      "name": "Advanced REST APIs with Flask and Python",
-      "course": "https://www.google.com/url?q=https://www.udemy.com/course/advanced-rest-apis-flask-python/",
-      "link": "https://drive.google.com/drive/folders/1EpvwV-xSRmmnCn533lwzO-hPhjPrxLhg",
-      "completed": "08/2022"
-    },
-    {
-      "name": "The Complete Web Development Bootcamp",
-      "course": "https://www.udemy.com/course/the-complete-web-development-bootcamp/",
-      "link": "https://drive.google.com/file/d/1FaiiMMSvszlADB7s-dKDkmMCPds8Cr-X/view?usp=sharing",
-      "completed": "08/2020"
-    },
-    {
-      "name": "AZ-104",
-      "course": "",
-      "link": "https://drive.google.com/drive/folders/1EpvwV-xSRmmnCn533lwzO-hPhjPrxLhg",
-      "completed": "04/2022"
-    }
-  ],
-  "skills": [
-    { "name": "JavaScript", "level": 5 },
-    { "name": "TypeScript", "level": 5 },
-    { "name": "CSS", "level": 5 },
-    { "name": "SCSS", "level": 4 },
-    { "name": "Node.js", "level": 4 },
-    { "name": "Python", "level": 3 },
-    { "name": "Angular2+", "level": 3 },
-    { "name": "React", "level": 3 },
-    { "name": "Next.js", "level": 2 },
-    { "name": "Flask", "level": 2 },
-    { "name": "Git", "level": 4 },
-    { "name": "CI/CD", "level": 3 }
   ],
   "experience": [
     {
@@ -80,7 +37,6 @@
       "current": false,
       "tasks": [
         "Creation and maintenance of https://internet.kozut.hu/",
-        "Maintenance of https://karrier.kozut.hu",
         "Creation of internal libraries",
         "Creation of internal web applications"
       ]
@@ -91,23 +47,18 @@
       "from": "09/2022",
       "to": "",
       "current": true,
-      "tasks": []
+      "tasks": [
+        "Moving sugarfitness admin from legacy to Next.js framework",
+        "Moving sugarmozi from legacy to Next.js framework: https://sugarmozi.hu"
+      ]
     }
   ],
   "languages": [
     { "name": "Hungarian", "level": "Native" },
     { "name": "English", "level": "Advanced" }
   ],
-  "socials": [
-    { "site": "StackOverflow", "url": "https://stackoverflow.com/users/13747848/kmp" },
-    { "site": "GitHub", "url": "https://github.com/kmpizmad/" },
-    { "site": "LinkedIn", "url": "https://www.linkedin.com/in/viktor-nagy-07672a246/" }
-  ],
   "info": {
-    "name": "Nagy Viktor",
-    "qualification": "Software Engineer",
-    "location": "Budapest, Hungary",
-    "email": "nagy.viktor392@gmail.com",
-    "imageUrl": ""
+    "name": "Viktor Nagy",
+    "qualification": "Software Engineer"
   }
 }
